# Privara-backend

./: README.md  fly.toml
app/: Cargo.toml
app/migrations/: .env.example  001_init.sql  002_onchain_txs.sql  003_audit.sql  004_intents.sql
app/src/: config.rs  crypto.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
app/src/blockchain/: fhenix.rs  mod.rs
app/src/domain/: auth.rs  governance.rs  mod.rs  payroll.rs
app/src/handlers/: audit.rs  auth.rs  blockchain.rs  governance.rs  intent.rs  mod.rs  payroll.rs
